examples/test/testpolicy5831.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5831
  namespace: namespace451
spec:
  podSelector:
    matchLabels:
      key35: value23
      key46: value11
      key26: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value42
      podSelector:
        matchLabels:
          key47: value36
          key13: value21
          key7: value22
